Add surefire argline and increase perm gen space
Reviewed-by: neugens, jerboaa
Review-thread: http://icedtea.classpath.org/pipermail/thermostat/2017-July/023996.html